findAllVolunteers
